16.ingress/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    env: demo
    name: nginx-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    env: demo
